<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_turquisegreen"
    tools:context=".ui.AboutInfoFragment">

    <TextView
        android:id="@+id/tv_about_plant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/about_plant"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/darkbrown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/gold_line"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_about_plant" />

    <TextView
        android:id="@+id/tv_plant_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/flower"
        android:textColor="@color/darkbrown"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gold_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_plant_info">

        <Button
            android:id="@+id/btn_add_plant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/darkgreen"
            android:drawableEnd="@drawable/icon_flower"
            android:text="@string/add_plant_caps"
            android:textColor="@color/eggwhite"
            app:strokeColor="@color/darkbrown"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkgreen"
            android:text="@string/cancel"
            android:textColor="@color/eggwhite"
            app:strokeColor="@color/darkbrown"
            app:strokeWidth="1dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
