<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_forgot">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/border_lightgreen">

        <TextView
            android:id="@+id/tv_delete_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/replace_plant"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toTopOf="@+id/gold_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/gold_line"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/border_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_permanent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textSize="17sp"
            android:textColor="@color/darkbrown"
            android:text="@string/permanent_answer"
            android:elevation="650dp"
            app:layout_constraintTop_toBottomOf="@+id/gold_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/darkgreen"
            android:elevation="4dp"
            android:drawableEnd="@drawable/icon_flower"
            android:text="@string/yes"
            android:textColor="@color/eggwhite"
            app:layout_constraintEnd_toStartOf="@+id/btn_no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_permanent"
            app:strokeColor="@color/darkbrown"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/darkgreen"
            android:elevation="4dp"
            android:text="@string/no"
            android:textColor="@color/eggwhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_yes"
            app:layout_constraintTop_toBottomOf="@+id/tv_permanent"
            app:strokeColor="@color/darkbrown"
            app:strokeWidth="1dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>