<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/border_lightgreen"
    android:padding="16dp"
    tools:context=".ui.game.ProfileFragment">

    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:fontFamily="@font/manjari"
        android:textStyle="bold"
        android:gravity="center"
        android:textAlignment="center"
        android:text="Hello, name!"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textinputEmail_et_layout"
        app:layout_constraintEnd_toStartOf="@+id/ib_signout"
        app:layout_constraintStart_toEndOf="@+id/ib_info"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_info"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:src="@drawable/icon_info"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:backgroundTint="@color/lightgreen"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>

    <ImageButton
        android:id="@+id/ib_signout"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:src="@drawable/icon_signout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:backgroundTint="@color/lightgreen"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputEmail_et_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="270dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/ib_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        app:boxBackgroundColor="@color/eggwhite"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/icon_x"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:background="@color/eggwhite"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputUser_et_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="270dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/textinputEmail_et_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        app:boxBackgroundColor="@color/eggwhite"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/icon_x"
            android:hint="@string/username"
            android:textColor="@color/black"
            android:background="@color/eggwhite"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/dailyNotificationsCard"
        app:layout_constraintTop_toBottomOf="@id/textinputUser_et_layout"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/eggwhite"
        android:padding="16dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/dailyNotificationsText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/daily_notifications"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintTop_toBottomOf="@id/et_username"
                android:textColor="@android:color/black" />

            <Switch
                android:id="@+id/dailyNotificationsSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:padding="16dp"
                android:thumbTint="@color/white"
                android:trackTint="#246246"
                android:scaleX="1.5"
                android:scaleY="1.5"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_history_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/eggwhite"
        android:layout_marginTop="20dp"
        android:text="@string/history"
        android:textColor="#36B680"
        app:layout_constraintTop_toBottomOf="@id/dailyNotificationsCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:drawableEnd="@drawable/icon_history"
        android:elevation="5dp"
        android:translationZ="1dp"
        android:stateListAnimator="@null" />

    <TextView
        android:id="@+id/deleteAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_your_account"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/btn_history_check"
        app:layout_constraintBottom_toTopOf="@id/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clickable="true"
        android:focusable="true" />

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="7dp"
        android:adjustViewBounds="true"
        android:background="@drawable/border_circlewhite"
        android:contentDescription="@string/save_button"
        android:padding="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteAccountText" />

</androidx.constraintlayout.widget.ConstraintLayout>